expose conditionally decorator, sparql_endpoint url is conditionally shown
