# apps/api/public/openapi.yaml
@@ -405,7 +405,6 @@ components:
       required:
         - score
         - timestamp
-        - sparql_endpoint
         - models
       properties:
         score:
@@ -420,9 +419,10 @@ components:
           example: 1707234567890
         sparql_endpoint:
           type: string
-          description: SPARQL endpoint URL used for validation
+          description: SPARQL endpoint URL used for validation. This field is used only for debugging purposes and could not be always available.
           example: https://example.com/sparql
           format: uri
+          deprecated: true
         models:
           type: array
           description: Per-model details with their semantic score
